@@ -38,13 +38,6 @@ Or run manually:
 ```bat
 java --module-path "javafx-sdk-21.0.7\lib" --add-modules javafx.controls,javafx.fxml -jar jchip8-fat-1.0.jar
 ```
-
-Or manually:
-
-```bash
-java --module-path ./javafx-sdk-21.0.7/lib --add-modules javafx.controls,javafx.fxml -jar jchip8-fat-1.0.jar
-```
-
 ---
 
 ##  Loading a ROM
